--- a/Day_09_10_Api_Flask/templates/index.html
+++ b/Day_09_10_Api_Flask/templates/index.html
@@ -6,7 +6,34 @@
 </head>
 
 <body>
-  
+  <header>
+    <h1>Nomad News</h1>
+    <div>
+      Order by:
+        {% if order_by == 'new' %}
+          <a href="/?order_by=popular">Popular</a> | <strong>New</strong>
+        {% else %}
+          <strong>Popular</strong> | <a href="/?order_by=new">New</a>
+        {% endif %}
+    </div>
+  </header>
+  <main>
+    {% for item in items %}
+    <div>
+      <div>
+        <a href="{{item.objectID}}">
+          <h3>{{item.title}}</h3>
+        </a>
+        (<a href="{{item.url}}" target="_blanl">{{item.url}}</a>)
+      </div>
+      <div>
+          {{item.points}} points | By: {{item.author}} | {{item.num_comments}} comments
+      </div>
+    </div>
+    <hr>
+    {% endfor %}
+
+  </main>
 </body>
 
 </html>
