--- a/Day_11_12_Reddit_Reader/templates/read.html
+++ b/Day_11_12_Reddit_Reader/templates/read.html
@@ -6,7 +6,21 @@
 </head>
 
 <body>
-  
+  <header>
+    <h1><a href="/">Reddit Reader</a></h1>
+    <h3>Reading: {% for getreddit in getreddits %}r/{{getreddit}}&nbsp;&nbsp;{% endfor %}</h3>
+  </header>
+  <main>
+    
+      {% for post in getposts %}
+      <div>
+          <h3><a href="{{post.url}}" target="_blank">{{post.title}}</a></h3>
+          <h4>{{post.count}} upvotes ·  r/{{post.lang}}</h4>
+        <hr>
+      </div>
+      {% endfor %}
+      
+  </main>
 </body>
 
 </html>
