--- a/Day_11_12_Reddit_Reader/templates/home.html
+++ b/Day_11_12_Reddit_Reader/templates/home.html
@@ -6,7 +6,28 @@
 </head>
 
 <body>
-  
+  <header>
+    <h1>Reddit Reader</h1>
+    <h3>A service to aggregate all your favourite subreddits</h3>
+  </header>
+  <main>
+    <form action="/read">
+      <h4>Select the subreddits you're interested on:</h4>
+      <ul>
+
+          {% for subreddit in subreddits %}
+          <li>
+            <input type="checkbox" name={{subreddit}} id={{subreddit}}>
+            <label for={{subreddit}}>
+            r/{{subreddit}}
+            </label>
+          </li>
+          {% endfor %}
+        
+      </ul>
+      <button type="submit">Aggregate</button>
+    </form>
+  </main>
 </body>
 
 </html>
