--- a/Day_13_14_Finally/templates/home.html
+++ b/Day_13_14_Finally/templates/home.html
@@ -3,40 +3,10 @@
 
 <head>
   <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 </head>
 
-<style>
-  *{
-    box-sizing: border-box;
-  }
-
-  body{
-    background-color:#e6e6e1;
-  }
-
-  main > form{
-    margin:0 auto;
-    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, .3);
-    border:2px solid #111111;
-    background-color:#f4f4f4;
-    border-radius:10px;
-  }
-
-  input[type=text]{
-    border:2px solid #111111;
-    border-radius:10px;
-  }
-
-  button{
-    background:#333333;
-    border:0px;
-  }
-
-  button:hover{
-    background:#000000;
-  }
-
-</style>
 
 <body>
   <header>
